Fixed home page background position on mobile

--- a/scss/4-pages/_home.scss
+++ b/scss/4-pages/_home.scss
@@ -45,7 +45,7 @@ main {
         linear-gradient(
             rgba(74, 63, 75, 0.8), 
             rgba(74, 63, 75, 0.8)),
-        url('../img/girl.png') no-repeat fixed center bottom/650px,
+        url('../img/girl.png') no-repeat fixed left bottom/650px,
         rgb(74, 63, 75);
     }
     main {
